spring-boot-bootstrap/src/main/fabric8/route.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: springboot-ocp-bootstrap
  labels:
    app: springboot-ocp-bootstrap
    expose: 'true'
    group: com.redhat
spec:
  host: springboot-ocp-bootstrap-rabbitmq.apps.labs-aws-430c.sandbox1287.opentlc.com
  to:
    kind: Service
    name: springboot-ocp-bootstrap
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
